RESOLVED FIXED269333
[UnifiedPDF] Choose a good initial scale, and fix various scaling issues
https://bugs.webkit.org/show_bug.cgi?id=269333
Summary [UnifiedPDF] Choose a good initial scale, and fix various scaling issues
Simon Fraser (smfr)
Reported 2024-02-13 16:28:32 PST
Need to: 1. Choose a good initial scale 2. Vertically center when not filling the height 3. Rescale when changing layout modes
Attachments
Simon Fraser (smfr)
Comment 1 2024-02-13 16:28:50 PST
Simon Fraser (smfr)
Comment 2 2024-02-13 16:33:28 PST
EWS
Comment 3 2024-02-14 08:31:44 PST
Committed 274627@main (201d691c2124): <https://commits.webkit.org/274627@main> Reviewed commits have been landed. Closing PR #24383 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.